--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -1,3 +1,20 @@
+extends ../layout
+
+block content
+
+h1 Accueil 
+ul
+    li
+        a(href="index") Accueil
+    li
+        a(href="services") Services
+    li
+        a(href="contact") Contact
+    li
+        a(href="utilisateurs") Liste des utilisateurs
+
+<!--
+
 const layout = require('../layout')
 
 module.exports = ` ${layout}
@@ -10,4 +27,4 @@ module.exports = ` ${layout}
         <li><a href="utilisateurs">Liste des utilisateurs</a></li>
     </ul>
 </body>
-</html>`
+</html>` -->
