--- a/views/pages/services.pug
+++ b/views/pages/services.pug
@@ -1,3 +1,12 @@
+exports ../layout
+
+block content
+
+h1 Services
+a(href="index") Retour au menu
+
+<!--
+
 const layout = require('../layout')
 
 module.exports = ` ${layout}
@@ -5,3 +14,5 @@ module.exports = ` ${layout}
     <a href="index">Retour au menu</a>
 </body>
 </html>`
+
+-->
