debugging some pug

--- a/views/pages/services.pug
+++ b/views/pages/services.pug
@@ -1,18 +1,6 @@
-exports ../layout
+extends ../layout
 
 block content
 
-h1 Services
-a(href="index") Retour au menu
-
-<!--
-
-const layout = require('../layout')
-
-module.exports = ` ${layout}
-    <h1>Services</h1>
-    <a href="index">Retour au menu</a>
-</body>
-</html>`
-
--->
+    h1 Services
+    a(href="index") Retour au menu
